# arduino-mock

./: CMakeLists.txt  README.md  arduino.pc.cmake.in
source/libarduino/: CMakeLists.txt
source/libarduino/inc/: EEPROM.h  arduino.hpp
source/libarduino/inc/EEPROM/: EEPROM.hpp
source/libarduino/inc/io/: io.hpp  pin.hpp
source/libarduino/inc/serial/: config.hpp  serial.hpp
source/libarduino/inc/utils/: defs.hpp  types.hpp
source/libarduino/src/EEPROM/: EEPROM.cpp
source/libarduino/src/io/: io.cpp  pin.cpp
source/libarduino/src/serial/: serial.cpp
source/libarduino/src/utils/: main.cpp
